--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.7",
     "concurrently": "^9.1.0",
     "copy-to-clipboard": "^3.3.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.2",
